<project xmlns="http://maven.apache.org/POM/4.0.0" 
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    
    <groupId>com.slytechs.sdk</groupId>
    <artifactId>sdk-bom</artifactId>
    <version>3.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    
    <name>Sly Technologies SDK BOM</name>
    <description>Bill of Materials for Sly Technologies SDK modules</description>

    <properties>
        <java.version>22</java.version>
        <maven.compiler.source>22</maven.compiler.source>
        <maven.compiler.target>22</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        
        <!-- Dependency versions -->
        <junit.version>5.10.2</junit.version>
    	<junit-platform.version>1.10.2</junit-platform.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Test -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>${junit.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>${junit.version}</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit.version}</version>
        </dependency>
        
        <!-- Test - JUnit Platform Suite -->
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-suite</artifactId>
            <version>${junit-platform.version}</version>
        </dependency>
            
            <!-- SDK modules -->
            <dependency>
                <groupId>com.slytechs.sdk</groupId>
                <artifactId>sdk-common</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.slytechs.sdk</groupId>
                <artifactId>jnetpcap-bindings</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.slytechs.sdk</groupId>
                <artifactId>sdk-protocol-core</artifactId>
                <version>${project.version}</version>
            </dependency>
           <dependency>
                <groupId>com.slytechs.sdk</groupId>
                <artifactId>sdk-protocol-tcpip</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.12.1</version>
                    <configuration>
                        <release>${java.version}</release>
                        <compilerArgs>
                            <arg>--enable-preview</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                    <configuration>
                        <argLine>--enable-preview</argLine>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <repositories>
        <repository>
            <id>slytechs-nexus</id>
            <name>Sly Technologies Private Repository</name>
            <url>https://maven.slytechs.com/repository/releases/</url>
        </repository>
    </repositories>
</project>